--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start:tetris": "ng serve tetris -o",
+    "build:tetris": "ng build tetris",
+    "test:tetris": "ng test tetris",
+    "lint:tetris": "ng lint tetris",
+    "e2e:tetris": "ng e2e tetris",
+    "start:tetris2": "ng serve tetris2 -o",
+    "build:game-engine-lib": "ng build game-engine-lib --watch",
+    "test:game-engine-lib": "ng test game-engine-lib",
+    "lint:game-engine-lib": "ng lint game-engine-lib",
+    "e2e:game-engine-lib": "ng e2e game-engine-lib"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +29,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^14.2.4",
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
@@ -32,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ng-packagr": "^14.2.0",
     "typescript": "~4.7.2"
   }
 }
