--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
     "strict": true,
     "noImplicitOverride": true,
     "paths": {
-      "@game-engine-lib": ["dist/game-engine-lib"]
+      "@game-engine-lib": [
+        "dist/game-engine-lib"
+      ],
+      "@my-lib": [
+        "dist/my-lib"
+      ]
     },
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
